k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: taskforge-backend:latest
          imagePullPolicy : IfNotPresent

          ports:
            - containerPort: 4000

          readinessProbe:
           httpGet:
            path: /api/health
            port: 4000
           initialDelaySeconds: 5
           periodSeconds: 10
        
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend

  ports:
    - port: 4000
      targetPort: 4000

  type: ClusterIP
