k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432

          readinessProbe:
           exec:
            command:
             - pg_isready
             - -U
             - taskforge_user
             - -d
             - taskforge
           initialDelaySeconds: 5
           periodSeconds: 10

          volumeMounts:
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
          
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: init-script
          configMap:
            name: postgres-init
      
        - name: postgres-storage
          persistentVolumeClaim:
           claimName: postgres-pvc
